testsuite/poke.pkl/immutable-func-1.pk
/* { dg-do compile } */

fun __pkl_unsafe_string_set /* { dg-error "already defined" } */
  = void: {};
